--- a/proj.win32/PompaDroid.vcxproj.filters
+++ b/proj.win32/PompaDroid.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\Classes\OptionDelegate.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\BaseCharactor.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -69,6 +72,9 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\PompaDroid.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\BaseCharactor.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
